force-app/main/default/objects/Patient__c/Patient__c.object-meta.xml
<CustomObject>
    <label>Patient</label>
    <nameField>
        <label>Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>