force-app/main/default/objects/Patient__c/validationRules/dateOfBirthValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>dateOfBirthValidation</fullName>
    <active>true</active>
    <errorConditionFormula>Date_Of_Birth__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date_Of_Birth__c</errorDisplayField>
    <errorMessage>Date Of Birth Cannot Be In The Past</errorMessage>
</ValidationRule>