force-app/main/default/objects/Patient__c/validationRules/EmailValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>EmailValidation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
    REGEX(
        Email__c,
        &quot;^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$&quot;
    )
)</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Please input a valid Email Address</errorMessage>
</ValidationRule>