force-app/main/default/objects/Patient__c/validationRules/PhoneNumberValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneNumberValidation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
    REGEX(
        Patient_Phone__c,
        &quot;^\\+?[1-9][0-9]{7,14}$&quot;
    )
)</errorConditionFormula>
    <errorDisplayField>Patient_Phone__c</errorDisplayField>
    <errorMessage>Enter a valid 10-digit Indian mobile number.</errorMessage>
</ValidationRule>